fix scroll background alignment

--- a/src/css/injected.css
+++ b/src/css/injected.css
@@ -335,6 +335,8 @@
 		z-index: -1;
 		background-image: var(--uclearn-background-imageset);
 		background-size: cover;
+		background-position: center;
+		background-attachment: fixed;
 		filter: var(--uclearn-bg-effect);
 		box-shadow: inset 0 0 0 100vmax var(--uclearn-translucent-bg);
 	}
